# fbot_hri_deprecated

./: README.md
fbot_face/: package.xml  setup.cfg  setup.py
fbot_face/config/: emotions.yaml
fbot_face/fbot_face/: __init__.py
fbot_face/fbot_face/emotions_bridge/: emotions_bridge.py
fbot_head/: main.py  necktest.py  package.xml  readme.md  requirements.txt  setup.cfg  setup.py
fbot_head/config/: emotions.yaml  motors.yaml
fbot_head/fbot_head/: emotions_publisher.py  my_node.py
fbot_head/launch/: emotions.launch.py  neck.launch.py
fbot_hri_bringup/: package.xml  setup.cfg  setup.py
fbot_hri_bringup/config/: asr_riva_test.yaml  fbot_audio_player.yaml  fbot_hotword_detection.yaml  fbot_hotword_restaurant.yaml  fbot_speech_recognizer_old.yaml  fbot_speech_synthesizer.yaml  fbot_speech_synthesizer_ml.yaml  fbot_speech_synthesizer_old.yaml  fbot_stt_quiz.yaml  fbot_stt_recepcionist.yaml  fbot_stt_restaurant.yaml  ros.yaml
fbot_hri_bringup/launch/: asr_riva.launch.py  audio_player.launch  audio_player.launch.py  hotword_detector.launch  hotword_detector.launch.py  new_hotword_detector.launch  new_hotword_detector.launch.py  speech_to_text.launch  speech_to_text.launch.py  speech_to_text_old.launch  speech_to_text_old.launch.py  synthesizer_speech.launch  synthesizer_speech.launch.py  synthesizer_speech_ml.launch  synthesizer_speech_ml.launch.py  synthesizer_speech_old.launch  synthesizer_speech_old.launch.py
fbot_screen/: README.md  package.xml  setup.cfg  setup.py
fbot_screen/fbot_screen/: display_node.py
fbot_screen/launch/: display.launch.py
fbot_speech/: README.md  install.sh  package.xml  requirements.txt  setup.cfg  setup.py
fbot_speech/fbot_speech/: audio_player.py  detector_hotword_node.py  new_detector_hotword_node.py  speech_recognizer.py  speech_recognizer_old.py  speech_synthesizer.py  speech_synthesizer_ml.py  speech_synthesizer_old.py
fbot_speech/fbot_speech_nodes/: audio_player.py  detector_hotword_node.py  new_detector_hotword_node.py  speech_recognizer.py  speech_recognizer_riva copy.py  speech_recognizer_riva.py  speech_synthesizer.py  speech_synthesizer_old.py
fbot_speech/fbot_speech_scripts/: detect_hotword.py  wav_to_mouth.py
fbot_speech/nodes/: audio_player.py  detector_hotword_node.py  new_detector_hotword_node.py  speech_recognizer.py  speech_recognizer_old.py  speech_synthesizer.py  speech_synthesizer_ml.py  speech_synthesizer_old.py
fbot_speech/scripts/: new_detect_hotword.py  wav_to_mouth.py
fbot_speech_msgs/: CMakeLists.txt  package.xml
fbot_speech_msgs/srv/: AudioPlayer.srv  RivaToText.srv  SpeechToTextASR.srv
(+14 files in other folders)
