<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fbot_hri_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stihl-bolsistas@todo.todo">stihl-bolsistas</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>fbot_speech</exec_depend>
  <exec_depend>fbot_speech_msgs</exec_depend>
  <exec_depend>launch_remote_ssh</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
