<?xml version="1.0"?>
<package format="3">
  <name>fbot_speech_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages and services for fbot_speech</description>
  <maintainer email="stihl-bolsistas@todo.todo">stihl-bolsistas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
